# idea-demo

./: Cargo.toml  LICENSE  README.md  demo.sh
base/src/: color.rs  flex.rs  label.rs  lib.rs  math.rs  object_tree.rs
example/: Cargo.toml
example/src/: example.rs
src/: compiler.rs  main.rs
